# Studies

./: README.md  Test
Intelligence Artificielle/: IAM2023_TP5_Apprentissage_Semi_Supervisé_Sujet.ipynb  IAM_2023_TP0_Introduction_à_Keras.ipynb
LangageC/sem5/: 1SN_LangageC_C1.ipynb  Bilan2_Exercice1.txt  monnaie.c
LangageC/sem5/fichiers_C/: exercice10.c  exercice18.c
Programmation fonctionnelle/Part1/: compress  ocaml
S5/: README.md  README.txt
S5/Architecture/: count4.tst  count4_b1_b2.tst.txt  count4_pair_impair.tst  decoder3to8.tst  decoder4to16.tst  decoder5to32.tst  decoder6to64.tst  reg_8.tst  tableau.ram.txt  tri_tab_int_algo1.test
S5/Automatique/: README.md
S5/EDP/src_TP1/: README.md  diffusivity.m  forcing.m  laplacian.m
S5/Environnement informatique/: etape2  etape2.c  etape3.txt  etape5.txt  etape6.txt
S5/Optimisation/: README.md
S5/Optimisation/src_eleves/: C14_diff_finies.m  diff_finies_avant.m  diff_finies_centree.m  diff_finies_complexe.m  exem1_diff_finies.m  main_diff_finies_cosinus.m
S5/Optimisation/src_etudiants/: Algo_Gauss_Newton.m  Algo_Newton.m  C14_results.txt  Modelisation_C14.m
S5/PIM/: Annale 2019.odt  README.md
S5/Proba/sources_TP1_probas/: README.md  ecriture_RVB.m  exercice_0.m  exercice_0bis.m  exercice_1.m  exercice_2.m  fonctions_TP1_proba.m
S5/Proba/sources_TP2_probas/: README.md  donnees_textes.mat  exercice_0.m  exercice_0.mat  exercice_1.m  exercice_2.m  exercice_2bis.m  exercice_3.m  fonctions_TP2_proba.m  (+4 more)
S5/Traitement_du_signal/: README.md
S5/why3/: descendant.mlw
S6/: README.md
S6/Analyse_donnees/: README.md
S6/Calcul_scientifique/: README.md  cgs.m  mgs.m  tp.m
S6/Projet_AD&CS/: README.md
S6/TOB/: README.md
S6/Telecom/: README.md
S7/: README.md
S7/Automates/: installOcamlDune
S7/Graphes/: Manifest.toml
S8/: README.md
S8/AI control/: README.md
S8/IA/: P1_sparql_enunciado_2023_GII.ipynb
S8/IA control/: README.md
S8/Machine Learning & Big Data/: README.md  practica1.ipynb  practica2.ipynb  practica3.ipynb  practica4.ipynb
S9/: README.md
S9/Audionumérique/: TP2_3SN_2024.ipynb  TP3_Audionumérique_3SN_M_(2024).ipynb
S9/Augmented reality/tpAR-v2023.1.0-rc3/src/tp/: CMakeLists.txt  README.md  calibration.cpp  checkerboard.cpp  checkerboardvideo.cpp  checkerboardvideoRectified.cpp  checkerboardvideoUndistort.cpp  tracking.cpp  trackingKLT.cpp  videoOGL.cpp  videoOGLOBJ.cpp  videoOGLTeapot.cpp  videoOGLTracking.cpp
S9/Augmented reality/tpAR-v2023.1.0-rc3/src/tp/tracker/: CMakeLists.txt  Camera.cpp  ChessboardCameraTracker.cpp  ChessboardCameraTrackerKLT.cpp  utility.cpp
S9/Augmented reality/tpAR-v2023.1.0-rc3/src/tp/tracker/tracker/: Camera.hpp  ChessboardCameraTracker.hpp  ChessboardCameraTrackerKLT.hpp  ICameraTracker.hpp  utility.hpp
S9/Augmented reality/tpAR-v2023.1.0-rc3/src/tutorials/: CMakeLists.txt  display_image.cpp  file_input_output.cpp  load_and_display_video.cpp  load_and_display_webcam.cpp  load_modify_image.cpp  mat_the_basic_image_container.cpp
S9/Intelligence Artificielle/: IAM2023_TP2_Génération_de_texte_Sujet.ipynb  IAM2023_TP3_Transformers_pour_la_classification_de_Texte_Sujet.ipynb  IAM2023_TP4_Autoencodeurs_Sujet.ipynb  IAM2023_TP5_Estimation_de_Posture_Sujet.ipynb  IAM2023_TP6_Apprentissage_Semi_Supervisé_Suite.ipynb  IAM2023_TP7_GAN_Sujet.ipynb  IAM2023_TP8_ACDC.ipynb  IAM_2023_TP1_Classification_dextraits_sonores_dans_différentes_langues_Sujet.ipynb
S9/Reinforcement learning/: Exercices_lecture2.ipynb  FinalProject.ipynb  Old Softmax Parametrization.ipynb  TP2_bandits_2023.ipynb
(+994 files in other folders)
